<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page_selection"
    android:layout_width="match_parent"
    android:layout_height="144dp">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="266dp"
            android:layout_height="32dp"
            android:text="Today" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="266dp"
            android:layout_height="38dp"
            android:text="Tomorrow" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="271dp"
            android:layout_height="33dp"
            android:text="Pending" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="265dp"
            android:layout_height="36dp"
            android:text="Recurring" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>