<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.date.DateFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:text="DateText"
        android:textSize="30sp"
        android:textStyle="bold" />

</FrameLayout>