...
            android:layout_height="wrap_content"
            android:buttonTint="#3DB4C3"
            android:buttonTintMode="src_in"
            android:text="Work" />

        <RadioButton
            android:id="@+id/schoolContext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#CC85EA"
            android:buttonTintMode="src_in"
            android:text="School" />

...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contexts">

        <RadioButton
            android:id="@+id/onetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="One-Time"
            android:checked = "true"/>

        <RadioButton
...
